--- a/Packs/Phishing/Playbooks/Phishing_-_Generic_v3_6_9.yml
+++ b/Packs/Phishing/Playbooks/Phishing_-_Generic_v3_6_9.yml
@@ -1,7 +1,7 @@
 id: Phishing - Generic v3
 version: -1
 name: Phishing - Generic v3
-description: "XSOAR. This playbook investigates and remediates a potential phishing incident. It engages with the user who triggered the incident while investigating the incident itself.\n\nNote:\n- Final remediation tasks are manual by default. can be managed by \"SearchAndDelete\" and \"BlockIndicators\" inputs. \n- Do not rerun this playbook inside a phishing incident since it can produce an unexpected result. Create a new incident instead if needed."
+description: "XSOAR SAAS. This playbook investigates and remediates a potential phishing incident. It engages with the user who triggered the incident while investigating the incident itself.\n\nNote:\n- Final remediation tasks are manual by default. can be managed by \"SearchAndDelete\" and \"BlockIndicators\" inputs. \n- Do not rerun this playbook inside a phishing incident since it can produce an unexpected result. Create a new incident instead if needed."
 starttaskid: "0"
 tasks:
   "0":
@@ -3918,5 +3918,4 @@ outputs: []
 tests:
 - Phishing v3 - DomainSquatting+EML+MaliciousIndicators - Test
 - Phishing v3 - Get Original Email + Search & Delete - Test
-fromversion: 6.8.0
-toversion: 7.9.9
+fromversion: 8.0.0
